Fri Aug 22 07:25:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c:
	- applied modified patch from Chris Reeves for fix
	  tds_send_emulated_execute if no parameters

Mon Aug 18 15:30:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsbytes.h include/tdsodbc.h src/apps/tsql.c:
	* src/dblib/dblib.c src/odbc/connectparams.c:
	* src/odbc/convert_tds2sql.c src/odbc/error.c:
	* src/odbc/odbc.c src/odbc/odbc_checks.c:
	* src/odbc/odbc_util.c src/odbc/prepare_query.c:
	* src/odbc/sql2tds.c src/tds/challenge.c:
	* src/tds/config.c src/tds/log.c src/tds/login.c:
	* src/tds/mem.c src/tds/net.c src/tds/numeric.c:
	* src/tds/query.c src/tds/token.c:
	- update copyright

Mon Aug 18 09:17:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: update DBD::ODBC

Sun Aug 17 22:45:47 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/connectparams.c:
	- skip empty options in SQLDriverConnect to make DBD::ODBC happy

Sun Aug 17 09:44:29 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/ctutil.c src/dblib/dbutil.c src/odbc/unittests/utf8.c:
	- remove some warnings

Sun Aug 17 09:26:47 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: rollback change to make blob1 test work again

Sat Aug 16 20:08:03 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/query.c: do not loose sync on conversion errors

Sat Aug 16 16:47:21 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/sql2tds.c:
	- allow SQL_WCHAR/SQL_WVARCHAR
	* src/odbc/unittests/Makefile.am src/odbc/unittests/utf8.c:
	- add test for utf-8 encoding on client

Fri Aug 15 11:55:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/Makefile.am:
	- make win64 compile again

Fri Aug 15 10:12:34 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: remove strange characters
