@@ -1,3 +1,7 @@
+Tue Aug 26 16:11:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/ctlib/cs.c:
+	- applied Andrew Victor patch for unused gmtime result
+
 Fri Aug 22 07:25:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/query.c:
 	- applied modified patch from Chris Reeves for fix
@@ -579,4 +583,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2592 2008-08-22 05:27:21 freddy77 Exp $
+$Id: ChangeLog,v 1.2593 2008-08-26 14:14:33 freddy77 Exp $
